# SimRender

./: .gitignore  1.mesh_render.py  2.render_autodiff.py  README.md  demo.py
chj/comm/: geometry.py
chj/speed/: cdll.py
chj_speed_cdll/: CMakeLists.txt
chj_speed_cdll/src/: common_math.h
chj_speed_cdll/src_cu/: common_math_gpu.h  cuda_tools.c  cuda_tools.h  make_render.cu  make_render_derv.cu
lib/: .gitignore  CMakeLists.txt  Interface.cpp  Interface.h  extra_example.cpp  make_render.cu  readme.md
lib/comm/: geometry.py
lib/render/: render_auto_diff.py  render_simple.py
lib/speed/: cdll.py
render/: geometry.py  lib.py
